[project]
name = "langgraph-midjourney-project"
version = "0.1.0"
description = "A LangGraph project with a Midjourney tool"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.1.0,<0.2.0",
    "langgraph>=0.0.30,<0.1.0",
    "langchain_openai>=0.1.0,<0.2.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "tavily-python>=0.3.0,<0.4.0", # Often useful for web search capabilities
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
