[project]
name = "langgraph-midjourney-project"
version = "0.1.0"
description = "A LangGraph project with a Midjourney tool"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
readme = "README.md"
requires-python = ">=3.10" # Updated minimum Python version for pygraphviz compatibility
dependencies = [
    "langchain>=0.1.0,<0.2.0",
    "langgraph>=0.0.30,<0.1.0",
    "langchain_openai>=0.1.0,<0.2.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "tavily-python>=0.3.0,<0.4.0", # Often useful for web search capabilities
    "pygraphviz>=1.12", # For drawing the graph
    "matplotlib>=3.8.0", # For drawing the graph
    "pillow>=10.0.0", # For handling the image output
    "requests>=2.20.0", # For making HTTP requests to Stability AI
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
